deployments/adrianvillanueva.com/00app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adrianvillanueva
  namespace: adrianvillanueva
spec:
  selector:
    matchLabels:
      app: adrianvillanueva
  replicas: 1
  template:
    metadata:
      labels:
        app: adrianvillanueva
    spec:
      containers:
        - name: adrianvillanueva
          image: ghcr.io/adrianvillanueva997/adrianvillanueva.com:v0.2.1
          ports:
            - containerPort: 8080

      restartPolicy: Always
