deployments/adrianvillanueva.com/03ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adrianvillanueva-ingressroute
  namespace: adrianvillanueva
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`adrianvillanueva.com`)
      kind: Rule
      services:
        - name: adrianvillanueva-service
          port: 80
      middlewares:
        - name: u7y7
  tls:
    secretName: adrianvillanueva-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-https-adrianvillanueva
  namespace: adrianvillanueva
spec:
  redirectScheme:
    scheme: websecure
    permanent: true
